--- a/optional_lib/CMakeLists.txt
+++ b/optional_lib/CMakeLists.txt
@@ -1,30 +1,26 @@
 cmake_minimum_required(VERSION 3.16.3)
 
-project(BOT)
+project(lib)
 
-# optional libs
-option(USE_LIBTIMON "use the libtimon biglib ofcourse why not??" ON)
 
-# configure a header file to pass some of the CMake settings
-# to the source code
-configure_file(libtimonconfig.h.in libtimonconfig.h)
+# include_directories(${CMAKE_SOURCE_DIR}/inc)
+# link_directories(${CMAKE_SOURCE_DIR}/lib)
+add_subdirectory(libpower)
 
-# optional
-if(USE_LIBTIMON)
-    add_subdirectory(libtimon)
-    list(APPEND EXTRA_LIBS libtimon)
-    list(APPEND EXTRA_INCLUDES "${PROJECT_SOURCE_DIR}/libtimon")
-endif()
-
-#add exe
 add_executable(main main.cpp)
 
-# link lib
-target_link_libraries(main PUBLIC ${EXTRA_LIBS})
-
-# add the binary tree to the search path for include files
-# so that we will find TutorialConfig.h
+target_link_libraries(main PUBLIC libpower) # libbar.so is found in ${CMAKE_SOURCE_DIR}/lib
 target_include_directories(main PUBLIC
-                           "${PROJECT_BINARY_DIR}"
-                           ${EXTRA_INCLUDES}
-                           )
+                            "${PROJECT_BINARY_DIR}"
+                            "${PROJECT_SOURCE_DIR}/libpower"
+                          )
+
+
+SET(GCC_COVERAGE_COMPILE_FLAGS "-Wall -pedantic")
+SET(GCC_COVERAGE_LINK_FLAGS    "-v")
+
+SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
+SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}")
+
+set_property(TARGET main PROPERTY CXX_STANDARD 17)
+set_target_properties(libpower PROPERTIES LINKER_LANGUAGE CXX)
