--- a/usage_requirements_lib/libcollatz/CMakeLists.txt
+++ b/usage_requirements_lib/libcollatz/CMakeLists.txt
@@ -1,1 +1,1 @@
-target_include_directories(libcollatz INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
+target_include_directories(libcollatz INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
