--- a/installing_testing/libcollatz/CMakeLists.txt
+++ b/installing_testing/libcollatz/CMakeLists.txt
@@ -1,1 +1,5 @@
-target_include_directories(libcollatz INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
+add_library(libcollatz libcollatz.h)
+target_include_directories(libcollatz INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+
+install(TARGETS libcollatz DESTINATION lib)
+install(FILES libcollatz.h DESTINATION include)
