I made a mess of my src dir when trying to install, this is now fixed

--- a/installing_testing/CMakeLists.txt
+++ b/installing_testing/CMakeLists.txt
@@ -7,7 +7,7 @@ add_executable(main main.cpp)
 
 # Make libCollatz optional
 option(USE_COLLATZ "Use the Collatz lib" ON)
-set(CMAKE_INSTALL_PREFIX "./build/stage")
+set(CMAKE_INSTALL_PREFIX "${PROJECT_BINARY_DIR}/stage")
 
 # configure a header file to pass some of the CMake settings to the source code
 configure_file(libCollatzConfig.h.in libCollatzConfig.h)
@@ -46,4 +46,13 @@ set_property(TARGET main PROPERTY CXX_STANDARD 17)
 
 # installation
 install(TARGETS main DESTINATION bin)
-install(FILES "${PROJECT_BINARY_DIR}/libcollatz/libcollatz.h" DESTINATION include)
+install(FILES "${PROJECT_BINARY_DIR}/stage/include/libcollatz.h" DESTINATION include)
+
+# Testing!
+enable_testing()
+
+# does the application run?
+add_test(NAME Runs COMMAND main)
+
+# define a function to simplify adding tests - end to end test
+# function (do_test target arg result)
